# ai

./: .gitignore  AGENTS.md  AgentShell.deps.json  AgentShell.pri  App.xbf  LauncherWindow.xbf  README.md  SettingsWindow.xbf  build-info.json  index.html  package.json  tools-catalog.json  tsconfig.json  unins000.cmd  widgets-catalog.json
.github/workflows/: build-app.yml  build-native-shell.yml  build-tools.yml  build-widgets.yml  build.yml
native/AgentShell/: AgentShell.csproj  App.xaml  App.xaml.cs  LauncherWindow.xaml  LauncherWindow.xaml.cs  Program.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.manifest
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automation.rs  config.rs  github.rs  lib.rs  logging.rs  main.rs  provider.rs  runtime_tools.rs  screen.rs  tools.rs  weather.rs  widgets.rs
tools/: README.md
tools/browser-search/: tool.json
tools/cargo-build/: tool.json
tools/copy-file/: tool.json
tools/dotnet-build/: tool.json
tools/download-file/: tool.json
tools/extract-zip/: tool.json
tools/find-text-in-files/: tool.json
tools/git-add-commit/: tool.json
tools/git-clone/: tool.json
tools/git-pull/: tool.json
tools/git-push/: tool.json
tools/git-status/: tool.json
tools/kill-process/: tool.json
tools/list-directory/: tool.json
tools/list-processes/: tool.json
tools/make-directory/: tool.json
tools/move-file/: tool.json
tools/npm-run/: tool.json
tools/open-browser/: tool.json
tools/open-folder/: tool.json
tools/open-terminal/: tool.json
(+59 files in other folders)
